fix contact alignment

--- a/src/app/contact-us/contact-us.component.css
+++ b/src/app/contact-us/contact-us.component.css
@@ -2,7 +2,7 @@
     Title: Contact Us
     Instructor: Professor Krasso
     Author: Brooke Taylor
-    Revision: 4/27/25
+    Revision: 5/3/25
 
     Description: Contact Us Component
 */
@@ -72,4 +72,19 @@ mat-icon {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.flex-item-right {
+  display: flex;
+  flex-direction: column;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+}
+
+.links a {
+  display:flex;
+  align-items: center;
 }
